--- a/style.css
+++ b/style.css
@@ -258,10 +258,30 @@ footer {
   color: #fff;
 }
 
+
+  footer ul.menu {
+    text-align: center;
+    margin: 0;
+  }
+
+    footer ul.menu li{
+      display: inline-block;
+      width: auto;
+      list-style: none;
+    }
+
+      footer ul.menu li a{
+        display: block;
+        padding: .5rem 1rem;
+        color: white;
+        font-size: 0.8rem;
+      }
+
+
   #copyright{
     padding: 20px 0;
-    font-size: 80%;
   }
+
 
 
 /*********** WordPress Misc ***********/
