--- a/style.css
+++ b/style.css
@@ -168,52 +168,6 @@ article {
     margin-bottom: 2rem;
   }
 
-  .post-meta{
-    margin-bottom: 1rem;
-    font-size: 0.75rem;
-    color: #999;
-  }
-
-  .post-meta .post-date,
-  .post-meta .category{
-    padding-right: 1em;
-  }
-
-  .post-meta .comment-num{
-    /* ここを表示すると、・・はコメントを受け付けていません・・と出るので非表示にしています　*/
-    /* white-space: nowrap; */
-    display: none;
-  }
-
-  .footer-post-meta{
-    margin-top: 2rem;
-    font-size: 0.75rem;
-    text-align: right;
-  }
-
-  .reply{
-    margin-bottom: 1rem;
-  }
-
-  .comment-meta {
-    font-size: 0.75rem;
-  }
-
-  .comment-notes{
-    font-size: 0.75rem;
-  }
-
-  #comment-area{
-    clear:both;
-  }
-
-  .comment-form-comment label{
-    display: none;
-  }
-
-  .logged-in-as {
-      font-size: 0.75rem;
-  }
 
 /****** aside ******/
 
@@ -223,8 +177,17 @@ aside {
 }
 
   aside h2{
+    font-size: 1rem;
     margin-bottom: 10px;
     font-family: 'Arial', sans-serif;
+  }
+
+  aside div {
+    margin-bottom: 2rem;
+  }
+
+  aside li{
+    font-size: 0.8rem;
   }
 
   #searchform{
@@ -240,9 +203,7 @@ aside {
       display: none;
     }
 
-  .widget{
-    margin-bottom: 60px;
-  }
+
   .tagcloud a{
     white-space: nowrap;
   }
@@ -281,6 +242,56 @@ footer {
   #copyright{
     padding: 20px 0;
   }
+
+
+/****** WordPress Post/Comment *******/
+
+.post-meta{
+  margin-bottom: 1rem;
+  font-size: 0.75rem;
+  color: #999;
+}
+
+.post-meta .post-date,
+.post-meta .category{
+  padding-right: 1em;
+}
+
+.post-meta .comment-num{
+  /* ここを表示すると、・・はコメントを受け付けていません・・と出るので非表示にしています　*/
+  /* white-space: nowrap; */
+  display: none;
+}
+
+.footer-post-meta{
+  margin-top: 2rem;
+  font-size: 0.75rem;
+  text-align: right;
+}
+
+.reply{
+  margin-bottom: 1rem;
+}
+
+.comment-meta {
+  font-size: 0.75rem;
+}
+
+.comment-notes{
+  font-size: 0.75rem;
+}
+
+#comment-area{
+  clear:both;
+}
+
+.comment-form-comment label{
+  display: none;
+}
+
+.logged-in-as {
+    font-size: 0.75rem;
+}
 
 
 
